fixed typo in covid19 solution¨

--- a/projects/covid19_solution/html/._covid19_solution-readable000.html
+++ b/projects/covid19_solution/html/._covid19_solution-readable000.html
@@ -417,7 +417,7 @@ first inserting \( S(t)=N-I(t) \), separating variables, and integrating:
 $$
 \begin{align}
 \displaystyle\int_{I_0}^{I(t)}\frac{\mathrm{d}I(t)}{I(t)(N-I(t))} \mathrm{d}I
-&= \displaystyle\int_{0}^{t}\frac{\beta}{N}\mathrm{d}t=\beta t\,,
+&= \displaystyle\int_{0}^{t}\beta\mathrm{d}t=\beta t\,,
 \tag{3}
 \end{align}
 $$
